<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jpp.makerlab.com.mybutton.ScrollViewActivity">
<ScrollView
    android:scrollbars="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_weight="1"
            android:id="@+id/main_btntext01"
            android:text="@string/main_btntext01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/main_btntext02"
            android:text="@string/main_btntext02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext03"
            android:layout_weight="1"
            android:text="@string/main_btntext03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext04"
            android:layout_weight="1"
            android:text="@string/main_btntext04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext05"
            android:text="@string/main_btntext05"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext06"
            android:text="@string/main_btntext06"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext07"
            android:text="@string/main_btntext07"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext08"
            android:text="@string/main_btntext08"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext09"
            android:text="@string/main_btntext09"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext10"
            android:text="@string/main_btntext10"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext11"
            android:text="@string/main_btntext11"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext12"
            android:text="@string/main_btntext12"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext13"
            android:text="@string/main_btntext13"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext14"
            android:text="@string/main_btntext14"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext15"
            android:text="@string/main_btntext15"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext16"
            android:text="@string/main_btntext16"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext17"
            android:text="@string/main_btntext17"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
