<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jpp.makerlab.com.mybutton.MainActivity">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:layout_weight="1"
            android:id="@+id/main_btntext01"
            android:text="@string/main_btntext01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/main_btntext02"
            android:text="@string/main_btntext02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/main_btntext03"
            android:layout_weight="1"
            android:text="@string/main_btntext03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext04"
            android:layout_weight="1"
            android:text="@string/main_btntext04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/main_btntext05"
            android:text="@string/main_btntext05"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/main_btntext06"
            android:text="@string/main_btntext06"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
